updates heroku app config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cross-env NODE_ENV=production ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "cross-env NODE_ENV=development TAILWIND_MODE=watch ng build --prod"
+    "heroku-postbuild": "cross-env NODE_ENV=production TAILWIND_MODE=build ng build --prod"
   },
   "private": true,
   "engines": {
